fix/style: fix input group button alignment as it doesn't need bottom margin

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,10 @@ a {
     margin-bottom: 0.5rem;
 }
 
+.input-group-btn > button {
+    margin-bottom: 0;
+}
+
 .btn-primary {
     background-color: #f0bb39;
     border-color: #f0bb39;
